SLING-7454 - move repoinit ITs here